--- a/src/style.scss
+++ b/src/style.scss
@@ -143,7 +143,7 @@ $white: #fff;
 		justify-content: center;
 	}
 
-	> .wp-block-tzm-section__background {
+	> :not(.wp-block-tzm-section__inner-container) {
 		z-index: 1;
 		border-radius: inherit;
 	}
